--- a/res/layout-port/add_data_dialog.xml
+++ b/res/layout-port/add_data_dialog.xml
@@ -120,20 +120,19 @@
     	android:layout_height="24dp"
     	android:background="@android:color/transparent"/>
     
-    <LinearLayout android:layout_width="fill_parent"
+    <LinearLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:layout_gravity="center" >
 	    <Button android:id="@+id/enter"
 	        android:layout_height="wrap_content"
-	        android:layout_width="0dp"
-	        android:layout_weight="1"
+	        android:layout_width="wrap_content"
 	        android:background="@drawable/button"
 	        android:text="@string/enter"
 	        android:textSize="15sp" />
 	    <Button android:id="@+id/cancel"
 	        android:layout_height="wrap_content"
-	        android:layout_width="0dp"
-	        android:layout_weight="1"
+	        android:layout_width="wrap_content"
 	        android:background="@drawable/button"
 	        android:text="@string/cancel"
 	        android:textSize="15sp" />
