Updates for calculating trip mileage

--- a/res/layout-land/add_data_dialog.xml
+++ b/res/layout-land/add_data_dialog.xml
@@ -59,6 +59,14 @@
             android:inputType="numberDecimal"
             android:nextFocusDown="@+id/gallons" >
         </EditText>
+        <CheckBox android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:checked="false"
+			android:id="@+id/calcCheckBox" />
+		<TextView android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="15sp"
+			android:text="Calc Trip" />
     </LinearLayout>
 
     <LinearLayout
