--- a/res/layout-land/add_data_dialog.xml
+++ b/res/layout-land/add_data_dialog.xml
@@ -98,8 +98,27 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="15"
-            android:imeOptions="actionDone"
             android:inputType="numberDecimal"
+            android:nextFocusDown="@+id/notes" />
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/notes"
+            android:textSize="15sp" />
+        <EditText
+            android:id="@+id/notes"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="15"
+            android:imeOptions="actionDone"
+            android:inputType="textShortMessage"
             android:nextFocusDown="@+id/enter" />
     </LinearLayout>
 
