--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -60,7 +60,7 @@
     <ExpandableListView android:id="@+id/result"
                         android:layout_width="0dp"
                         android:layout_weight="2"
-                        android:layout_height="fill_parent"
+                        android:layout_height="match_parent"
                         android:transcriptMode="alwaysScroll"
                         android:cacheColorHint="#00000000"
                         android:listSelector="@android:color/transparent"/>
