--- a/res/layout/list_item_day.xml
+++ b/res/layout/list_item_day.xml
@@ -6,8 +6,8 @@
     android:id="@+id/list_item_day"
     android:gravity="center_vertical" >
     
-    <TextView android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
+    <TextView android:layout_width="match_parent"
+	    android:layout_height="match_parent"
 	    android:id="@+id/list_day_text_view"
 	    android:textSize="20sp"
 	    android:padding="10dp"
