--- a/res/layout/list_item_month.xml
+++ b/res/layout/list_item_month.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="horizontal"
     android:id="@+id/list_item_month" >
     
     <TextView
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:id="@+id/list_month_text_view"
 		android:textSize="20sp"
 		android:padding="10dp"
